--- a/pubtopics.html
+++ b/pubtopics.html
@@ -80,9 +80,8 @@ Pseudo-Rāzī: The Arabic and Hebrew Traditions</em> (Routledge,
 [<a href="https://doi.org/10.1017/S0007087425000263">pub</a>|<a
 href="https://works.hcommons.org/records/6wwt8-06572">PDF</a>]</p>
 </blockquote>
-<h2
-id="re-thinking-the-greek-alchemical-corpus-in-byzantine-context">Re-thinking
-the Greek Alchemical Corpus in Byzantine Context</h2>
+<h2 id="the-greek-alchemical-corpus-in-byzantine-context">The Greek
+Alchemical Corpus in Byzantine Context</h2>
 <p>“Hierotechnicians by Name and Their Middle Byzantine Fame.”</p>
 <blockquote>
 <p><em>Journal of Late Antique, Islamic and Byzantine Studies</em> 1.1–2
@@ -194,20 +193,6 @@ href="https://hcommons.org/deposits/item/hc:38251/">PDF</a>]</p>
 href="https://www.jstor.org/stable/10.7817/jameroriesoci.137.2.0253">pub</a>|<a
 href="https://hcommons.org/deposits/item/hc:15783/">PDF</a>]</p>
 </blockquote>
-<p>“Al-Mansur and the Critical Ambassador.”</p>
-<blockquote>
-<p><em>Bulletin d’études orientales</em> 60 (2011; published May 2012):
-145–160.<br />
-[<a href="https://doi.org/10.4000/beo.406">pub</a>|<a
-href="https://hcommons.org/deposits/item/hc:21715/">PDF</a>]</p>
-</blockquote>
-<p>Book review: Rustam Shukurov, <em>Byzantine Ideas of Persia,
-650–1461</em> (Routledge, 2023).</p>
-<blockquote>
-<p><em>The Byzantine Review</em> 6 (2024): 112–126.<br />
-[<a href="https://doi.org/10.17879/byzrev-2024-5508">open access</a>|<a
-href="https://hcommons.org/deposits/item/hc:65447/">PDF</a>]</p>
-</blockquote>
 <p>Book review: Andrea De Giorgi, <em>Ancient Antioch from the Seleucid
 Era to the Islamic Conquest</em> (Cambridge University Press, 2016).</p>
 <blockquote>
@@ -226,7 +211,7 @@ Caliphate: AD 500–1000</em> (American University in Cairo Press,
 href="http://marginalia.lareviewofbooks.org/in-meccas-backyard-by-alexandre-m-roberts/">open
 access</a>]</p>
 </blockquote>
-<h2 id="science-and-mathematics">Science and Mathematics</h2>
+<h2 id="cross-cultural-contacts">Cross-Cultural Contacts</h2>
 <p>“Byzantine-Islamic Scientific Culture in the Astronomical Diagrams of
 Chioniades on John of Damascus.”</p>
 <blockquote>
@@ -237,14 +222,6 @@ Dumbarton Oaks, 2022), 113–148.<br />
 href="https://www.hup.harvard.edu/catalog.php?isbn=9780884024866">pub</a>|<a
 href="https://hcommons.org/deposits/item/hc:47227/">PDF</a>]</p>
 </blockquote>
-<p>“Mathematical Philology in the Treatise on Double False Position in
-an Arabic Manuscript at Columbia University.”</p>
-<blockquote>
-<p><em>Philological Encounters</em> 5.3–4 (2020): 308–352.<br />
-[<a href="https://doi.org/10.1163/24519197-BJA10007">pub</a>|<a
-href="https://zenodo.org/record/4408536">postprint</a>|<a
-href="https://hcommons.org/deposits/item/hc:33383/">PDF</a>]</p>
-</blockquote>
 <p>“The Crossing Paths of Greek and Persian Knowledge in the 9th-century
 Arabic ‘Book of Degrees.’”</p>
 <blockquote>
@@ -253,6 +230,29 @@ secolo</em>, ed. Carla Noce, Massimo Pampaloni, and Claudia Tavolieri,
 Orientalia Christiana Analecta 293 (Rome: Pontificio Istituto Orientale,
 2013), 279–303.<br />
 [<a href="https://hcommons.org/deposits/item/hc:16045/">PDF</a>]</p>
+</blockquote>
+<p>“Al-Mansur and the Critical Ambassador.”</p>
+<blockquote>
+<p><em>Bulletin d’études orientales</em> 60 (2011; published May 2012):
+145–160.<br />
+[<a href="https://doi.org/10.4000/beo.406">pub</a>|<a
+href="https://hcommons.org/deposits/item/hc:21715/">PDF</a>]</p>
+</blockquote>
+<p>Book review: Rustam Shukurov, <em>Byzantine Ideas of Persia,
+650–1461</em> (Routledge, 2023).</p>
+<blockquote>
+<p><em>The Byzantine Review</em> 6 (2024): 112–126.<br />
+[<a href="https://doi.org/10.17879/byzrev-2024-5508">open access</a>|<a
+href="https://hcommons.org/deposits/item/hc:65447/">PDF</a>]</p>
+</blockquote>
+<h2 id="mathematics">Mathematics</h2>
+<p>“Mathematical Philology in the Treatise on Double False Position in
+an Arabic Manuscript at Columbia University.”</p>
+<blockquote>
+<p><em>Philological Encounters</em> 5.3–4 (2020): 308–352.<br />
+[<a href="https://doi.org/10.1163/24519197-BJA10007">pub</a>|<a
+href="https://zenodo.org/record/4408536">postprint</a>|<a
+href="https://hcommons.org/deposits/item/hc:33383/">PDF</a>]</p>
 </blockquote>
 <hr />
 <p><small>[<em>Last updated October 2025.</em>]</small></p>
