background/link colors; slight rearrange, reformat

--- a/index.html
+++ b/index.html
@@ -38,10 +38,8 @@ href="https://hcommons.org/members/amroberts/">hcommons</a> |
 <!--[zenodo](https://zenodo.org/communities/amroberts/search?page=1&size=20) |-->
 <!-- <a itemprop="sameAs" content="https://orcid.org/0000-0002-6648-5392" href="https://orcid.org/0000-0002-6648-5392" target="orcid.widget" rel="noopener noreferrer" style="vertical-align:top;"><img src="https://orcid.org/sites/default/files/images/orcid_16x16.png" style="width:.7em;margin-right:.5em;" alt="✺">orcid</a> -->
 <a href="https://orcid.org/0000-0002-6648-5392">orcid</a> ]</p>
-<p>[ <a href="https://gralched.hcommons.org/">GrAlchEd: Greek Alchemical
-Editions in Progress</a> ]</p>
 <h1 id="publications">Publications</h1>
-<p>by date | <a href="pubtopics.html">by topic</a></p>
+<p><em>by kind</em> | <a href="pubtopics.html"><em>by topic</em></a></p>
 <hr />
 <h2 id="book">Book</h2>
 <p><a
@@ -258,6 +256,9 @@ href="https://hcommons.org/deposits/item/hc:33751/">PDF</a>]</p>
 href="http://marginalia.lareviewofbooks.org/in-meccas-backyard-by-alexandre-m-roberts/">open
 access</a>]</p>
 </blockquote>
+<h2 id="webpage">Webpage</h2>
+<p><a href="https://gralched.hcommons.org/">GrAlchEd: Greek Alchemical
+Editions in Progress</a></p>
 <hr />
 <p><small>[<em>Last updated October 2025.</em>]</small></p>
 </body>
