--- a/pubtopics.html
+++ b/pubtopics.html
@@ -38,13 +38,10 @@ href="https://hcommons.org/members/amroberts/">hcommons</a> |
 <!--[zenodo](https://zenodo.org/communities/amroberts/search?page=1&size=20) |-->
 <!-- <a itemprop="sameAs" content="https://orcid.org/0000-0002-6648-5392" href="https://orcid.org/0000-0002-6648-5392" target="orcid.widget" rel="noopener noreferrer" style="vertical-align:top;"><img src="https://orcid.org/sites/default/files/images/orcid_16x16.png" style="width:.7em;margin-right:.5em;" alt="✺">orcid</a> -->
 <a href="https://orcid.org/0000-0002-6648-5392">orcid</a> ]</p>
-<p>[ <a href="https://gralched.hcommons.org/">GrAlchEd: Greek Alchemical
-Editions in Progress</a> ]</p>
 <h1 id="publications">Publications</h1>
-<p><a href="index.html">by type</a> | by topic</p>
+<p><a href="index.html"><em>by kind</em></a> | <em>by topic</em></p>
 <hr />
-<h2 id="the-history-of-alchemy-and-chemistry">The History of Alchemy and
-Chemistry</h2>
+<h2 id="alchemy-and-chemistry">Alchemy and Chemistry</h2>
 <p>“Disentangling Alchemy.”</p>
 <blockquote>
 <p><em>Isis</em> 116.4 (forthcoming December 2025).</p>
@@ -72,16 +69,19 @@ invited November 2020; submitted August 2021).</p>
 href="https://hssonline.org/news/616068/Isis-September-2022---Author-Interview-with-Alexandre-Roberts.htm">interview
 about the article</a>]</p>
 </blockquote>
-<p>Book review: Gabriele Ferrario, <em>The Book on Alums and Salts of
-Pseudo-Rāzī: The Arabic and Hebrew Traditions</em> (Routledge,
-2024).</p>
+<p><strong>book review</strong> | Gabriele Ferrario, <em>The Book on
+Alums and Salts of Pseudo-Rāzī: The Arabic and Hebrew Traditions</em>
+(Routledge, 2024).</p>
 <blockquote>
 <p><em>British Journal for the History of Science</em> (2025).<br />
 [<a href="https://doi.org/10.1017/S0007087425000263">pub</a>|<a
 href="https://works.hcommons.org/records/6wwt8-06572">PDF</a>]</p>
 </blockquote>
-<h2 id="the-greek-alchemical-corpus-in-byzantine-context">The Greek
-Alchemical Corpus in Byzantine Context</h2>
+<p><strong>webpage</strong> | <a
+href="https://gralched.hcommons.org/">GrAlchEd: Greek Alchemical
+Editions in Progress</a></p>
+<h2 id="the-greek-alchemical-corpus-in-byzantium">The Greek Alchemical
+Corpus in Byzantium</h2>
 <p>“Hierotechnicians by Name and Their Middle Byzantine Fame.”</p>
 <blockquote>
 <p><em>Journal of Late Antique, Islamic and Byzantine Studies</em> 1.1–2
@@ -114,8 +114,8 @@ access</a>|<a
 href="https://hcommons.org/deposits/item/hc:31587/">PDF</a>]</p>
 </blockquote>
 <h2
-id="byzantine-arabic-christianity-and-the-history-of-philosophy">Byzantine-Arabic
-Christianity and the History of Philosophy</h2>
+id="byzantine-arabic-christianity-and-hellenic-philosophy">Byzantine-Arabic
+Christianity and Hellenic Philosophy</h2>
 <p><a
 href="https://www.ucpress.edu/books/reason-and-revelation-in-byzantine-antioch/hardcover"><em>Reason
 and Revelation in Byzantine Antioch: The Christian Translation Program
@@ -158,17 +158,16 @@ and Studies 2 (Leiden: Brill, 2020; published October 2019),
 [<a href="https://doi.org/10.1163/9789004415041_009">pub</a>|<a
 href="https://hcommons.org/deposits/item/hc:32967/">PDF</a>]</p>
 </blockquote>
-<p>Book review: Giovanni Mandolino, <em>Yaḥyā ibn ʿAdī: Treatise on
-Divine Unity According to the Doctrine of the Christians. Arabic Text,
-English Translation and Commentary</em> (Brill, 2023).</p>
+<p><strong>book review</strong> | Giovanni Mandolino, <em>Yaḥyā ibn
+ʿAdī: Treatise on Divine Unity According to the Doctrine of the
+Christians. Arabic Text, English Translation and Commentary</em> (Brill,
+2023).</p>
 <blockquote>
 <p><em>Church History</em> (2025).<br />
 [<a href="https://doi.org/10.1017/S0009640725101327">pub</a>|<a
 href="https://works.hcommons.org/records/w6fdd-9yn77">PDF</a>]</p>
 </blockquote>
-<h2
-id="social-and-cultural-history-of-byzantium-and-the-middle-east">Social
-and Cultural History of Byzantium and the Middle East</h2>
+<h2 id="social-and-cultural-history">Social and Cultural History</h2>
 <p>“Heretics, Dissidents, and Society: Narrating the Trial of John bar
 ʿAbdun.”</p>
 <blockquote>
@@ -193,17 +192,18 @@ href="https://hcommons.org/deposits/item/hc:38251/">PDF</a>]</p>
 href="https://www.jstor.org/stable/10.7817/jameroriesoci.137.2.0253">pub</a>|<a
 href="https://hcommons.org/deposits/item/hc:15783/">PDF</a>]</p>
 </blockquote>
-<p>Book review: Andrea De Giorgi, <em>Ancient Antioch from the Seleucid
-Era to the Islamic Conquest</em> (Cambridge University Press, 2016).</p>
+<p><strong>book review</strong> | Andrea De Giorgi, <em>Ancient Antioch
+from the Seleucid Era to the Islamic Conquest</em> (Cambridge University
+Press, 2016).</p>
 <blockquote>
 <p>“The Paths and Memories Tying Antioch to Its Hinterland,” <em>Journal
 of Roman Archaeology</em> 30 (2017): 810–817.<br />
 [<a href="https://doi.org/10.1017/S1047759400074845">pub</a>|<a
 href="https://hcommons.org/deposits/item/hc:33751/">PDF</a>]</p>
 </blockquote>
-<p>Book review: Timothy Power, <em>The Red Sea from Byzantium to the
-Caliphate: AD 500–1000</em> (American University in Cairo Press,
-2012).</p>
+<p><strong>book review</strong> | Timothy Power, <em>The Red Sea from
+Byzantium to the Caliphate: AD 500–1000</em> (American University in
+Cairo Press, 2012).</p>
 <blockquote>
 <p>“In Mecca’s Backyard,” <em>Marginalia Review of Books</em>, April 29,
 2014.<br />
@@ -238,13 +238,15 @@ Orientalia Christiana Analecta 293 (Rome: Pontificio Istituto Orientale,
 [<a href="https://doi.org/10.4000/beo.406">pub</a>|<a
 href="https://hcommons.org/deposits/item/hc:21715/">PDF</a>]</p>
 </blockquote>
-<p>Book review: Rustam Shukurov, <em>Byzantine Ideas of Persia,
-650–1461</em> (Routledge, 2023).</p>
+<p><strong>book review</strong> | Rustam Shukurov, <em>Byzantine Ideas
+of Persia, 650–1461</em> (Routledge, 2023).</p>
 <blockquote>
 <p><em>The Byzantine Review</em> 6 (2024): 112–126.<br />
 [<a href="https://doi.org/10.17879/byzrev-2024-5508">open access</a>|<a
 href="https://hcommons.org/deposits/item/hc:65447/">PDF</a>]</p>
 </blockquote>
+<p>(See also “Byzantine Engagement with Islamicate Alchemy” <a
+href="#alchemy-and-chemistry">above</a>.)</p>
 <h2 id="mathematics">Mathematics</h2>
 <p>“Mathematical Philology in the Treatise on Double False Position in
 an Arabic Manuscript at Columbia University.”</p>
