--- a/pubtopics.html
+++ b/pubtopics.html
@@ -44,7 +44,11 @@ href="https://hcommons.org/members/amroberts/">hcommons</a> |
 <h2 id="alchemy-and-chemistry">Alchemy and Chemistry</h2>
 <p>“Disentangling Alchemy.”</p>
 <blockquote>
-<p><em>Isis</em> 116.4 (forthcoming December 2025).</p>
+<p><em>Isis</em> 116.4 (2025): 623–644.<br />
+[<a
+href="https://www.journals.uchicago.edu/doi/10.1086/738213">pub</a>|<a
+href="https://www.journals.uchicago.edu/eprint/MJAAXIWZIRKIZYKDPJPA/full?redirectUri=/doi/epdf/10.1086/738213">temporarily
+open access</a>]</p>
 </blockquote>
 <p>“Thinking about Chemistry in Byzantium and the Islamic World.”</p>
 <blockquote>
