DisAlch pub is open access so far, not sure why

--- a/index.html
+++ b/index.html
@@ -87,9 +87,7 @@ Brill; invited July 2020; submitted June 2022).</p>
 <blockquote>
 <p><em>Isis</em> 116.4 (2025): 623–644.<br />
 [<a
-href="https://www.journals.uchicago.edu/doi/10.1086/738213">pub</a>|<a
-href="https://www.journals.uchicago.edu/eprint/MJAAXIWZIRKIZYKDPJPA/full?redirectUri=/doi/epdf/10.1086/738213">temporarily
-open access</a>]</p>
+href="https://www.journals.uchicago.edu/doi/10.1086/738213">open</a>]</p>
 </blockquote>
 <h3 id="section-1">2023</h3>
 <p>“Thinking about Chemistry in Byzantium and the Islamic World.”</p>
