--- a/pubtopics.html
+++ b/pubtopics.html
@@ -46,9 +46,7 @@ href="https://hcommons.org/members/amroberts/">hcommons</a> |
 <blockquote>
 <p><em>Isis</em> 116.4 (2025): 623–644.<br />
 [<a
-href="https://www.journals.uchicago.edu/doi/10.1086/738213">pub</a>|<a
-href="https://www.journals.uchicago.edu/eprint/MJAAXIWZIRKIZYKDPJPA/full?redirectUri=/doi/epdf/10.1086/738213">temporarily
-open access</a>]</p>
+href="https://www.journals.uchicago.edu/doi/10.1086/738213">open</a>]</p>
 </blockquote>
 <p>“Thinking about Chemistry in Byzantium and the Islamic World.”</p>
 <blockquote>
