--- a/index.html
+++ b/index.html
@@ -87,7 +87,10 @@ Brill; invited July 2020; submitted June 2022).</p>
 <blockquote>
 <p><em>Isis</em> 116.4 (2025): 623–644.<br />
 [<a
-href="https://www.journals.uchicago.edu/doi/10.1086/738213">open</a>]</p>
+href="https://www.journals.uchicago.edu/doi/10.1086/738213">open</a>]<br />
+[<a
+href="https://hssonline.org/news/716508/Isis-December-2025---Author-Interview-Alexandre-Roberts.htm">interview
+about the article</a>]</p>
 </blockquote>
 <h3 id="section-1">2023</h3>
 <p>“Thinking about Chemistry in Byzantium and the Islamic World.”</p>
