--- a/pubtopics.html
+++ b/pubtopics.html
@@ -46,7 +46,9 @@ href="https://hcommons.org/members/amroberts/">hcommons</a> |
 <blockquote>
 <p><em>Isis</em> 116.4 (2025): 623–644.<br />
 [<a
-href="https://www.journals.uchicago.edu/doi/10.1086/738213">open</a>]<br />
+href="https://www.journals.uchicago.edu/doi/10.1086/738213">pub</a>|<a
+href="https://www.journals.uchicago.edu/eprint/MJAAXIWZIRKIZYKDPJPA/full?redirectUri=/doi/epdf/10.1086/738213">temporarily
+open</a>]<br />
 [<a
 href="https://hssonline.org/news/716508/Isis-December-2025---Author-Interview-Alexandre-Roberts.htm">interview
 about the article</a>]</p>
