rev Mandolino: issues details

--- a/index.html
+++ b/index.html
@@ -236,7 +236,7 @@ href="https://works.hcommons.org/records/6wwt8-06572">PDF</a>]</p>
 According to the Doctrine of the Christians. Arabic Text, English
 Translation and Commentary</em> (Brill, 2023).</p>
 <blockquote>
-<p><em>Church History</em> (2025).<br />
+<p><em>Church History</em> 94.1 (2025): 139–141.<br />
 [<a href="https://doi.org/10.1017/S0009640725101327">pub</a>|<a
 href="https://works.hcommons.org/records/w6fdd-9yn77">PDF</a>]</p>
 </blockquote>
