--- a/pubtopics.html
+++ b/pubtopics.html
@@ -170,7 +170,7 @@ href="https://hcommons.org/deposits/item/hc:32967/">PDF</a>]</p>
 Christians. Arabic Text, English Translation and Commentary</em> (Brill,
 2023).</p>
 <blockquote>
-<p><em>Church History</em> (2025).<br />
+<p><em>Church History</em> 94.1 (2025): 139–141.<br />
 [<a href="https://doi.org/10.1017/S0009640725101327">pub</a>|<a
 href="https://works.hcommons.org/records/w6fdd-9yn77">PDF</a>]</p>
 </blockquote>
